--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">A LITTLE ABOUT <span class="text-muted">ME.</span></h2>
-        <p class="lead">Welcome to my Home page. I am a part time instructor at CSULB. I also graduated from CSULB in the Business Department. I have been here for about 22 years. I started out teaching CECS 110 and from that course I developed CECS 200 because of the interest is strictly Web design. The course has been added as part of the requirements for a minor and certificate in Web Technology and Applications along with the CECS 110 course. I completed my Masters degree in Educational Technology in 2006, which I completed completely online.
-
-I am a single mom and have a son who is 22 yrs old and a daughter who is 16. My son is a HB state lifeguard hoping to be a firefighter someday and my daughter is in 11th grade not sure what she wants to do after high school. They both keep me busy along with our 2 dogs and 2 cats</p>
+        <p class="lead">I am a senior Electrical Engineering Major at CSULB. I was originally a Computer Science Major,
+          but after an internship I decided that Computer Science was not for me. After having taken several Mathematics 
+          and General Physics I took the course EE 211 (Basic Circuit Analysis I) I felt that electrical Engineering was 
+          better suited for myself. For my senior design project, I design a DC/DC Buck Converter and a battery charger 
+          with over-charge protection. Although I was able to finish this project it was a real stressful experience as we 
+          were only able to get 2 hours for 6 weeks of lab time to troubleshoot our design circuit.</p>
       </div>
       <div class="col-md-5">
         <img src="picture.jpg" alt="Arturo Ramos" width="400" height="400">
