--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
    <hr class="featurette-divider">    
     
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Created by <a href="mailto:Arturo.RamosHernandez@student.csulb.edu">Arturo Ramos</a> -  <a href="https://www.csulb.edu/college-of-engineering/roni-allen" target="_blank">CECS PT Faculty</a></p><p>Last updated on 5-7-21</p>
+  <p>Created by <a href="mailto:Arturo.RamosHernandez@student.csulb.edu">Arturo Ramos</a></p><p>Last updated on 5-7-21</p>
     <i class="fas fa-chalkboard-teacher" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i>
 </div>
     </div>
